# BasicHydraulics

./: .gitignore  CLAUDE.md  Examples.ipynb  LICENSE  Readme.md  channel.py  gui_streamlit.py  main.py  pyproject.toml  requirements.txt  structure.py
basichydraulics/: __init__.py  channel.py  culvert.py  gui.py  structure.py
tests/: test_culvert.py
